Step 2. Finished first three sections of the website

--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Personal Stylist | Irina Rachmanova</title>
-    <meta name="title" content="Personal Stylist | Irina Rachmanova">
-    <meta name="description" content="Discover new facets of your style with a personal stylist. Individual consultations for the perfect look in any situation.">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Personal Stylist | Irina Rachmanova</title>
+	<meta name="title" content="Personal Stylist | Irina Rachmanova">
+	<meta name="description" content="Discover new facets of your style with a personal stylist. Individual consultations for the perfect look in any situation.">
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://metatags.io/">
-    <meta property="og:title" content="Personal Stylist | Irina Rachmanova">
-    <meta property="og:description" content="Discover new facets of your style with a personal stylist. Individual consultations for the perfect look in any situation.">
-    <meta property="og:image" content="img/og_picture.jpg">
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://metatags.io/">
+	<meta property="og:title" content="Personal Stylist | Irina Rachmanova">
+	<meta property="og:description" content="Discover new facets of your style with a personal stylist. Individual consultations for the perfect look in any situation.">
+	<meta property="og:image" content="img/og_picture.jpg">
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://metatags.io/">
-    <meta property="twitter:title" content="Personal Stylist | Irina Rachmanova">
-    <meta property="twitter:description" content="Discover new facets of your style with a personal stylist. Individual consultations for the perfect look in any situation.">
-    <meta property="twitter:image" content="img/og_picture.jpg">
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://metatags.io/">
+	<meta property="twitter:title" content="Personal Stylist | Irina Rachmanova">
+	<meta property="twitter:description" content="Discover new facets of your style with a personal stylist. Individual consultations for the perfect look in any situation.">
+	<meta property="twitter:image" content="img/og_picture.jpg">
 
-    <!-- Favicon  -->
-    <link rel="apple-touch-icon" sizes="180x180" href="icons/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon/favicon-16x16.png">
-    <link rel="manifest" href="icons/favicon/site.webmanifest">
+	<!-- Favicon  -->
+	<link rel="apple-touch-icon" sizes="180x180" href="icons/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon/favicon-16x16.png">
+	<link rel="manifest" href="icons/favicon/site.webmanifest">
 
-    <link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    
-    <script src="js/script.js"></script>
+	<section class="promo">
+		<div class="container">
+			<header class="header">
+				<a href="#" class="header__logo">
+					<img src="icons/logo.svg" alt="logo">
+				</a>
+				<nav class="header__nav">
+					<ul class="header__menu">
+						<li class="header__link"><a href="#">Home</a></li>
+						<li class="header__link"><a href="#">Services</a></li>
+						<li class="header__link"><a href="#">About me</a></li>
+						<li class="header__link"><a href="#">Gallery</a></li>
+						<li class="header__link"><a href="#">Contacts</a></li>
+					</ul>
+				</nav>
+				<a href="tel:+37255504998" class="header__contact">
+					<img src="icons/phone.svg" alt="phone">
+					+372 55504998
+				</a>
+			</header>
+
+			<div class="promo__wrapper">
+				<h1 class="promo__header">Your personal stylist<br> <span>IRINA RACHMANOVA</span></h1>
+				<h2 class="promo__subheader">Discover Your Style. Own Your Confidence.</h2>
+				<button class="button">Order a consultation</button>
+				<div class="promo__butterfly"></div>
+			</div>
+
+			<div class="promo__main"></div>
+		</div>
+	</section>
+
+	<section class="welcome">
+		<div class="container">
+			<div class="welcome__wrapper">
+				<img src="img/welcome.jpg" alt="welcome_img" class="welcome__img">
+
+				<div class="welcome__descr">
+					<h2 class="title">Welcome to the world of style!</h2>
+					<div class="welcome__text">
+						<p>With my help, you will find the opportunity to transform your image, express your individuality through fashion and become the best version of yourself you have always dreamed of.</p> 
+
+						<p>Taking into account your current style and preferences, I will help you open new horizons in the world of fashion, highlight your uniqueness and feel confident in any situation.</p>
+
+						<p>Let's create your unique image together, which will reflect your essence and help you achieve your amazing goals!</p> 
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="popular">
+		<div class="container">
+			<h2 class="title title_center">Popular services</h2>
+
+			<div class="popular__wrapper">
+				<div class="popular__card">
+					<img src="img/wardrobe.jpg" alt="wardrobe" class="popular__img">
+					<div class="popular__descr">
+						<h3 class="popular__subtitle">Wardrobe review</h3>
+						<div class="popular__text">A wardrobe review with personal stylist will help you organize your wardrobe to create stylish and functional looks.</div>
+					</div>
+					<hr>
+					<div class="popular__footer">
+						<div class="popular__price">100€</div>
+						<button class="button button_mini">Learn more</button>
+					</div>
+				</div>
+
+				<div class="popular__card">
+					<img src="img/consultation.jpg" alt="consultation" class="popular__img">
+					<div class="popular__descr">
+						<h3 class="popular__subtitle">Consultation</h3>
+						<div class="popular__text">A consultation with personal stylist will help you identify your unique style and create a plan of action to achieve it.</div>
+					</div>
+					<hr>
+					<div class="popular__footer">
+						<div class="popular__price">50€</div>
+						<button class="button button_mini">Learn more</button>
+					</div>
+				</div>
+
+				<div class="popular__card">
+					<img src="img/shopping.jpg" alt="shopping" class="popular__img">
+					<div class="popular__descr">
+						<h3 class="popular__subtitle">Co-shopping</h3>
+						<div class="popular__text">Co-shopping with personal stylist will help you to make stylish and suitable purchases, save time and avoid mistakes.</div>
+					</div>
+					<hr>
+					<div class="popular__footer">
+						<div class="popular__price">150€</div>
+						<button class="button button_mini">Learn more</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<script src="js/script.js"></script>
 </body>
 </html>
