--- a/src/index.html
+++ b/src/index.html
@@ -33,29 +33,31 @@
 <body>
 	<section class="promo">
 		<div class="container">
-			<header class="header">
-				<a href="#" class="header__logo">
-					<img src="icons/logo.svg" alt="logo">
-				</a>
-				<nav class="header__nav">
-					<ul class="header__menu">
-						<li class="header__link"><a href="#">Home</a></li>
-						<li class="header__link"><a href="#">Services</a></li>
-						<li class="header__link"><a href="#">About me</a></li>
-						<li class="header__link"><a href="#">Gallery</a></li>
-						<li class="header__link"><a href="#">Contacts</a></li>
-					</ul>
-				</nav>
-				<a href="tel:+37255504998" class="header__contact">
-					<img src="icons/phone.svg" alt="phone">
-					+372 55504998
-				</a>
+			<header class="header header_main">
+				<div class="header__wrapper">
+					<a href="index.html" class="header__logo">
+						<img src="icons/logo.svg" alt="logo">
+					</a>
+					<nav class="header__nav">
+						<ul class="header__menu">
+							<li class="header__link"><a href="index.html">Home</a></li>
+							<li class="header__link"><a href="services.html">Services</a></li>
+							<li class="header__link"><a href="about.html">About me</a></li>
+							<li class="header__link"><a href="gallery.html">Gallery</a></li>
+							<li class="header__link"><a href="contacts.html">Contacts</a></li>
+						</ul>
+					</nav>
+					<a href="tel:+37255504998" class="header__contact">
+						<img src="icons/phone.svg" alt="phone">
+						+372 55504998
+					</a>
+				</div>
 			</header>
 
 			<div class="promo__wrapper">
 				<h1 class="promo__header">Your personal stylist<br> <span>IRINA RACHMANOVA</span></h1>
 				<h2 class="promo__subheader">Discover Your Style. Own Your Confidence.</h2>
-				<button class="button">Order a consultation</button>
+				<button class="button">Get in touch</button>
 				<div class="promo__butterfly"></div>
 			</div>
 
@@ -63,14 +65,14 @@
 		</div>
 	</section>
 
-	<section class="welcome">
+	<section class="about">
 		<div class="container">
-			<div class="welcome__wrapper">
-				<img src="img/welcome.jpg" alt="welcome_img" class="welcome__img">
+			<div class="about__wrapper">
+				<img src="img/welcome.jpg" alt="about_img" class="about__img">
 
-				<div class="welcome__descr">
+				<div class="about__descr">
 					<h2 class="title">Welcome to the world of style!</h2>
-					<div class="welcome__text">
+					<div class="about__text">
 						<p>With my help, you will find the opportunity to transform your image, express your individuality through fashion and become the best version of yourself you have always dreamed of.</p> 
 
 						<p>Taking into account your current style and preferences, I will help you open new horizons in the world of fashion, highlight your uniqueness and feel confident in any situation.</p>
@@ -82,53 +84,130 @@
 		</div>
 	</section>
 
-	<section class="popular">
+	<section class="services">
 		<div class="container">
 			<h2 class="title title_center">Popular services</h2>
 
-			<div class="popular__wrapper">
-				<div class="popular__card">
-					<img src="img/wardrobe.jpg" alt="wardrobe" class="popular__img">
-					<div class="popular__descr">
-						<h3 class="popular__subtitle">Wardrobe review</h3>
-						<div class="popular__text">A wardrobe review with personal stylist will help you organize your wardrobe to create stylish and functional looks.</div>
+			<div class="services__wrapper">
+				<div class="services__card">
+					<img src="img/cards/wardrobe.jpg" alt="wardrobe" class="services__img">
+					<div class="services__descr">
+						<h3 class="services__subtitle">Wardrobe review</h3>
+						<div class="services__text">A wardrobe review with personal stylist will help you organize your wardrobe to create stylish and functional looks.</div>
 					</div>
 					<hr>
-					<div class="popular__footer">
-						<div class="popular__price">100€</div>
+					<div class="services__footer">
+						<div class="services__price">100€</div>
 						<button class="button button_mini">Learn more</button>
 					</div>
 				</div>
 
-				<div class="popular__card">
-					<img src="img/consultation.jpg" alt="consultation" class="popular__img">
-					<div class="popular__descr">
-						<h3 class="popular__subtitle">Consultation</h3>
-						<div class="popular__text">A consultation with personal stylist will help you identify your unique style and create a plan of action to achieve it.</div>
+				<div class="services__card">
+					<img src="img/cards/consultation.jpg" alt="consultation" class="services__img">
+					<div class="services__descr">
+						<h3 class="services__subtitle">Consultation</h3>
+						<div class="services__text">A consultation with personal stylist will help you identify your unique style and create a plan of action to achieve it.</div>
 					</div>
 					<hr>
-					<div class="popular__footer">
-						<div class="popular__price">50€</div>
+					<div class="services__footer">
+						<div class="services__price">50€</div>
 						<button class="button button_mini">Learn more</button>
 					</div>
 				</div>
 
-				<div class="popular__card">
-					<img src="img/shopping.jpg" alt="shopping" class="popular__img">
-					<div class="popular__descr">
-						<h3 class="popular__subtitle">Co-shopping</h3>
-						<div class="popular__text">Co-shopping with personal stylist will help you to make stylish and suitable purchases, save time and avoid mistakes.</div>
+				<div class="services__card">
+					<img src="img/cards/shopping.jpg" alt="shopping" class="services__img">
+					<div class="services__descr">
+						<h3 class="services__subtitle">Co-shopping</h3>
+						<div class="services__text">Co-shopping with personal stylist will help you to make stylish and suitable purchases, save time and avoid mistakes.</div>
 					</div>
 					<hr>
-					<div class="popular__footer">
-						<div class="popular__price">150€</div>
+					<div class="services__footer">
+						<div class="services__price">150€</div>
 						<button class="button button_mini">Learn more</button>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
+	<section class="carousel">
+		<h2 class="title title_center">Examples of my work</h2>
+
+		<div class="container">
+			<div class="carousel__inner">
+				<div>
+					<img src="img/gallery/person1-1.jpg" alt="style1">
+				</div>
+				<div>
+					<img src="img/gallery/person1-2.jpg" alt="style2">
+				</div>
+				<div>
+					<img src="img/gallery/person1-3.jpg" alt="style3">
+				</div>
+				<div>
+					<img src="img/gallery/person2-1.jpg" alt="style4">
+				</div>
+				<div>
+					<img src="img/gallery/person2-2.jpg" alt="style5">
+				</div>
+				<div>
+					<img src="img/gallery/person2-3.jpg" alt="style6">
+				</div>
+			</div>
+
+			<button type="button" class="prev"><img src="icons/arrows/left.svg"></button>
+			<button type="button" class="next"><img src="icons/arrows/right.svg"></button>
+		</div>
+	</section>
+
+	<section class="form">
+		<div class="container">
+			<h2 class="title title_left">Are you ready to change your life?</h2>
+			<h3 class="form__subtitle">Fill out the registration form and I will contact you shortly</h3>
+
+			<form id="contact-form" class="form__area" action="#">
+                <input class="form__input" name="name" required placeholder="Your name" type="text"> 
+                <input class="form__input" name="phone" required placeholder="Your phone number"> 
+                <input class="form__input" name="email" required placeholder="Your E-mail" type="email"> 
+				<textarea required class="form__textarea" name="textarea" placeholder="Please write, in what service are you interested?"></textarea>
+				<div class="form__policy">
+					<input class="form__checkbox" required type="checkbox">
+					<span>I agree with the <a href="policy.html">privacy policy</a></span>
+				</div>
+                <button class="button button_submit">Send message</button>
+            </form>
+		</div>
+	</section>
+
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__wrapper">
+				<a href="#" class="footer__logo">
+					<img src="icons/logo_white.svg" alt="logo">
+				</a>
+				<div class="footer__rights"><span>2024</span> © All rights reserved</div>
+				<div class="footer__location">Tallinn, Estonia</div>
+				<a href="tel:+37255504998" class="footer__contact">
+					<img src="icons/phone_white.svg" alt="phone">
+					+372 55504998
+				</a>
+				<div class="footer__social">
+					<a href="https://www.instagram.com/jznew_style?igsh=bXFqZTR1NmZtbWJs" class="footer__social-item">
+						<img src="icons/social/instagram.svg" alt="instagram">
+					</a>
+					<a href="#" class="footer__social-item">
+						<img src="icons/social/facebook.svg" alt="facebook">
+					</a>
+					<a href="#" class="footer__social-item">
+						<img src="icons/social/telegram.svg" alt="telegram">
+					</a>
+				</div>
+			</div>
+		</div>
+	</footer>
 	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
