--- a/src/contacts.html
+++ b/src/contacts.html
@@ -7,6 +7,7 @@
 	<title>Personal Stylist | Irina Rachmanova</title>
 	<meta name="title" content="Personal Stylist | Irina Rachmanova">
 	<meta name="description" content="Discover new facets of your style with a personal stylist. Individual consultations for the perfect look in any situation.">
+	<meta name="theme-color" content="#eae0d6">
 
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
@@ -31,7 +32,30 @@
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+	<div class="menu">
+		<div class="menu__block">
+			<div class="menu__close">
+				<svg width="30" height="30" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
+			</div>
+			<nav>
+				<ul class="menu__list">
+					<li class="menu__link"><a href="index.html">Home</a></li>
+					<li class="menu__link"><a href="services.html">Services</a></li>
+					<li class="menu__link"><a href="about.html">About me</a></li>
+					<li class="menu__link"><a href="gallery.html">Gallery</a></li>
+					<li class="menu__link"><a href="contacts.html">Contacts</a></li>
+				</ul>
+			</nav>
+		</div>
+		<div class="menu__overlay"></div>
+	</div>
+
 	<header class="header">
+		<div class="hamburger">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
 		<div class="container">
 			<div class="header__wrapper">
 				<a href="index.html" class="header__logo">
@@ -66,7 +90,7 @@
 						<p>I look forward to meeting you!</p>
 					</div>
 
-					<div class="contacts__email">E-mail: <a href="mailto:irina.rachmanova@gmail.com">irina.rachmanova@gmail.com</a></div>
+					<div class="contacts__email">E-mail: <a href="mailto:marizel7jren@gmail.com">marizel7jren@gmail.com</a></div>
 					<div class="contacts__phone">Phone number: <a href="tel:+37255504998">+372 55504998</a></div>
 					<div class="contacts__social">
 						<div class="contacts__social-text">My social networks:</div>
@@ -89,19 +113,19 @@
 		</div>
 	</section>
 
-	<section class="form">
+	<section class="form" id="form">
 		<div class="container">
 			<h2 class="title title_left">Are you ready to change your life?</h2>
 			<h3 class="form__subtitle">Fill out the registration form and I will contact you shortly</h3>
 
 			<form id="contact-form" class="form__area" action="#">
-                <input class="form__input" name="name" required placeholder="Your name" type="text"> 
-                <input class="form__input" name="phone" required placeholder="Your phone number"> 
-                <input class="form__input" name="email" required placeholder="Your E-mail" type="email"> 
-				<textarea required class="form__textarea" name="textarea" placeholder="Your message"></textarea>
-				<div class="form__policy">
-					<input class="form__checkbox" required type="checkbox">
-					<span>I agree with the <a href="policy.html">privacy policy</a></span>
+                <input autocomplete="on" class="form__input" name="name" required placeholder="Your name" type="text"> 
+                <input autocomplete="on" class="form__input" name="phone" required placeholder="Your phone number"> 
+                <input autocomplete="on" class="form__input" name="email" required placeholder="Your E-mail" type="email"> 
+				<textarea required class="form__textarea" name="textarea" placeholder="Please write, in what service are you interested or ask a question"></textarea>
+				<div class="form__privacy">
+					<input name="checkbox" class="form__checkbox" required type="checkbox">
+					<span>I agree with the <a href="privacy.html">privacy policy</a></span>
 				</div>
                 <button class="button button_submit">Send message</button>
             </form>
@@ -134,5 +158,7 @@
 			</div>
 		</div>
 	</footer>
+
+	<script src="js/script.js"></script>
 </body>
 </html>
